--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@
 header {
     background: white;
     min-width: 80%;
+    position: sticky;
     
 }
 
@@ -20,6 +21,7 @@ header>h1 {
 
 body {
     background: #24272E;
+    font-size: 16px;
     
 }
 
@@ -47,26 +49,26 @@ img {
 .badge {
     background: #E2584D;
     color: white;
-    font-size: 14px;
+    font-size: 1.5rem;
     padding: 2px 10px;
     font-family: Asap, sans-serif;
 }
 
 #user-label {
     position: absolute;
-    top: 40px;
-    left: -25px;
+    top: 35px;
+    left: -40px;
 
 }
 
 #computer-label {
     position: absolute;
-    top: 40px;
-    right: -30px;
+    top: 35px;
+    right: -45px;
 }
 
 .result {
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     width: 100%;
 }
@@ -90,7 +92,7 @@ img {
     padding: 10px;
     margin: 10px;
     transition: all 0.3s ease;
-    width: 26%;
+    width: 20%;
     
 
 }
@@ -140,15 +142,9 @@ img {
     background: grey;
 }
 
-.reset {
+#reset-button {
     text-align: center;
-    width: 105px;
-    font-size: 25px;
-    font-family: Asap, sans-serif;
-    position: absolute;
-    left: 35%;
-    height: 50px;
-    /* top: 85%; */
+    position:relative;
     
 
 
