--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,8 @@ header {
     background: white;
     min-width: 80%;
     position: sticky;
-    
+    padding: 10px;
+
 }
 
 header>h1 {
@@ -16,13 +17,14 @@ header>h1 {
     text-align: center;
     font-family: Asap, sans-serif;
     font-size: 46px;
+    font-weight: bold;
 
 }
 
 body {
     background: #24272E;
     font-size: 16px;
-    
+
 }
 
 img {
@@ -30,19 +32,19 @@ img {
 }
 
 .score-board {
-    min-width:80%;
+    min-width: 80%;
     margin: 20px auto;
     border: 3px solid white;
     border-radius: 4px;
     text-align: center;
-    max-width: 30%;
-    width: 20%;
+    max-width: 20%;
+    width: 10%;
     color: white;
     font-size: 46px;
     padding: 15px 20px;
     font-family: Asap, sans-serif;
     position: relative;
-    
+
 
 }
 
@@ -93,7 +95,7 @@ img {
     margin: 10px;
     transition: all 0.3s ease;
     width: 20%;
-    
+
 
 }
 
@@ -144,17 +146,18 @@ img {
 
 #reset-button {
     text-align: center;
-    
+    /* position: fixed; */
+    margin: 5%;
 }
 
-.foot{
-    margin-top: 20%;
+.foot {
+
     background-color: white;
-    margin-bottom: none;
-    
+
+
 }
 
-a{
+a {
     color: #24272E;
-    
+
 }
