--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ header {
     background: white;
     min-width: 80%;
     position: sticky;
-    padding: 10px;
+    padding: 0.3%;
 
 }
 
@@ -16,14 +16,14 @@ header>h1 {
     color: #25272E;
     text-align: center;
     font-family: Asap, sans-serif;
-    font-size: 46px;
+    font-size: 36px;
     font-weight: bold;
 
 }
 
 body {
     background: #24272E;
-    font-size: 16px;
+    font-size: 12px;
 
 }
 
@@ -33,14 +33,14 @@ img {
 
 .score-board {
     min-width: 80%;
-    margin: 20px auto;
+    margin: 8px auto;
     border: 3px solid white;
     border-radius: 4px;
     text-align: center;
-    max-width: 20%;
+    max-width: 10%;
     width: 10%;
     color: white;
-    font-size: 46px;
+    font-size: 36px;
     padding: 15px 20px;
     font-family: Asap, sans-serif;
     position: relative;
@@ -58,21 +58,22 @@ img {
 
 #user-label {
     position: absolute;
-    top: 35px;
+    top: 25px;
     left: -40px;
 
 }
 
 #computer-label {
     position: absolute;
-    top: 35px;
+    top: 25px;
     right: -45px;
 }
 
 .result {
-    font-size: 30px;
+    font-size: 2rem;
     color: white;
     width: 100%;
+    margin-top: 3px;
 }
 
 .result>p {
@@ -82,7 +83,7 @@ img {
 }
 
 .choices {
-    margin: 50px 0px;
+    margin: 2% 0px;
     text-align: center;
     width: 100%;
 }
@@ -91,8 +92,8 @@ img {
     display: inline-block;
     border: 4px solid white;
     border-radius: 50%;
-    padding: 10px;
-    margin: 10px;
+    padding: 0.5%;
+    margin: 1%;
     transition: all 0.3s ease;
     width: 20%;
 
@@ -110,9 +111,7 @@ img {
     color: white;
     font-family: Asap, sans-serif;
     font-weight: bold;
-    font-size: 20px;
-    margin-top: 20px;
-    width: 100%;
+    font-size: 1rem;
 
 }
 
@@ -146,15 +145,16 @@ img {
 
 #reset-button {
     text-align: center;
-    /* position: fixed; */
-    margin: 5%;
+    position: relative;
+    font-size: 16px;
+    padding: auto;
+    margin-left: 30%;
+    margin-bottom: 3%;
 }
 
 .foot {
-
     background-color: white;
-
-
+    padding: auto;
 }
 
 a {
