--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ img {
 
 .score-board {
     min-width: 80%;
-    margin: 8px auto;
+    margin: 3% auto;
     border: 3px solid white;
     border-radius: 4px;
     text-align: center;
@@ -155,6 +155,7 @@ img {
 .foot {
     background-color: white;
     padding: auto;
+    margin-top: 100%;
 }
 
 a {
