fix: mobile screen responsiveness
Added mobile screen responsiveness.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ header {
     background: white;
     min-width: 80%;
     position: sticky;
-    padding: 0.3%;
+    padding: 2%;
 
 }
 
@@ -16,7 +16,7 @@ header>h1 {
     color: #25272E;
     text-align: center;
     font-family: Asap, sans-serif;
-    font-size: 36px;
+    font-size: 46px;
     font-weight: bold;
 
 }
@@ -95,7 +95,7 @@ img {
     padding: 0.5%;
     margin: 1%;
     transition: all 0.3s ease;
-    width: 20%;
+    width: 15%;
 
 
 }
@@ -111,7 +111,7 @@ img {
     color: white;
     font-family: Asap, sans-serif;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.3rem;
 
 }
 
@@ -162,3 +162,28 @@ a {
     color: #24272E;
 
 }
+
+@media screen and (max-width: 480px) {
+    .score-board{
+        margin-top: 15%;
+    }
+    .result{
+        margin-top: 15%;
+        font-size: 1.4rem;
+    }
+    .choice{
+        margin-top: 15%;
+        width: 28%;
+    }
+    #action-message{
+        margin-top: 20%;
+        font-size: 1.3rem;
+    }
+
+    header{
+        padding: 5%;
+    }
+
+
+
+  }
