--- a/stylesheet.css
+++ b/stylesheet.css
@@ -187,6 +187,45 @@ a {
     header >h1{
         font-size: 36px;
     }
-
-
   }
+
+  @media only screen and (min-device-width:768px) and (max-device-width: 1024px) {
+    .score-board{
+        margin-top: 10%;
+        font-size: 3rem;
+    }
+    .result{
+        margin-top: 10%;
+        font-size: 2rem;
+    }
+    .choice{
+        margin-top: 10%;
+        width: 30%;
+    }
+    #action-message{
+        margin-top: 10%;
+        font-size: 1.5rem;
+    }
+
+    header{
+        padding: 3%;
+
+    }
+    header >h1{
+        font-size: 46px;
+    }
+
+    #user-label {
+        position: absolute;
+        top: 35px;
+        left: -40px;
+    
+    }
+    
+    #computer-label {
+        position: absolute;
+        top: 35px;
+        right: -45px;
+    }
+
+   }
